-Added method 'ErrorResponse' in class 'AuthToikenFileter' -Implementing 'ShopConfig'